# aoc2024

./: .gitignore  README.md
python/: advent_of_code1.ipynb  advent_of_code1.py  advent_of_code10.py  advent_of_code11.py  advent_of_code12.py  advent_of_code2.py  advent_of_code3.py  advent_of_code4.py  advent_of_code6.py  advent_of_code7.py  advent_of_code8.py  pyproject.toml  utils.py
python/2025/: advent_of_code1.py  advent_of_code2.py  advent_of_code3.py
python/src/advent_of_code/: utils.py
python/src/advent_of_code/2023/: aoc1.py
python/src/advent_of_code/2024/: advent_of_code10.py  advent_of_code11.py  advent_of_code12.py  advent_of_code19.py  advent_of_code2.py  advent_of_code4.py  advent_of_code5.py  advent_of_code6.py  advent_of_code7.py  advent_of_code8.py  advent_of_code9.py
python/src/advent_of_code/2025/: advent_of_code1.py  advent_of_code10.py  advent_of_code4.py  advent_of_code5.py  advent_of_code6.py  advent_of_code7.py  advent_of_code8.py  advent_of_code9.py
rust/: Cargo.toml
rust/src/: advent_of_code1.rs  advent_of_code11.rs  advent_of_code12.rs  advent_of_code2.rs  advent_of_code23.rs  advent_of_code3.rs  advent_of_code4.rs  advent_of_code5.rs  advent_of_code8.rs  bin.rs  lib.rs
rust/src/aoc2023/: day02.rs
rust/tests/: advent_of_code11_integration.rs  advent_of_code12_integration.rs  advent_of_code1_integration.rs  advent_of_code23_integration.rs  advent_of_code2_integration.rs  advent_of_code3_integration.rs  advent_of_code4_integration.rs  advent_of_code5_integration.rs  advent_of_code8_integration.rs
rust/tests/aoc2023/: main.rs  (+1 more)
