[project]
name = "advent_of_code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tools.setuptools]
packages =["python"]

[dependency-groups]
dev = [
    "ipynb>=0.5.1",
]
